Fixed overlapping values in globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,11 +30,11 @@
     --clr-white: 0 0% 100%; /* #FFFFFF, rgb(255, 255, 255), hsl(0, 0%, 100%) */
 
     /* Typography */
-    --fs-xl: clamp(3.5rem, 5vw + 1rem, 12rem);
-    --fs-lg: clamp(1.5rem, 2vw + 1rem, 5rem);
-    --fs-md: clamp(1.25rem, 1.5vw + 1rem, 3rem);
-    --fs-sm: clamp(1rem, 1.5vw + 1rem, 2rem);
-    --fs-xs: clamp(0.75rem, 1.5vw + 1rem, 1.5rem);
+    --fs-h1: clamp(3.5rem, 5vw + 1rem, 12rem);
+    --fs-h2: clamp(1.5rem, 2vw + 1rem, 5rem);
+    --fs-h3: clamp(1.25rem, 1.5vw + 1rem, 3rem);
+    --fs-h4: clamp(1rem, 1.5vw + 1rem, 2rem);
+    --fs-h5: clamp(0.75rem, 1.5vw + 1rem, 1.5rem);
 
     /* Font Sizes */
     --fs-xs: 0.75rem;
@@ -52,6 +52,12 @@
     --fs-9xl: 8rem;
 
     /* Line Heights */
+    --lh-h1: 1.1;
+    --lh-h2: 1.3;
+    --lh-h3: 1.3;
+    --lh-h4: 1.3;
+    --lh-h5: 1.3;
+
     --lh-xs: 1rem;
     --lh-sm: 1.25rem;
     --lh-base: 1.5rem;
